# aria-amt

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  youtube-dl-links.txt
.github/workflows/: black.yml
amt/: audio.py  data.py  evaluate.py  infer.py  inference.py  mir.py  model.py  run.py  tokenizer.py  train.py  utils.py
amt/assets/: mel_filters.npz
amt/inference/: model.py  quantize.py  transcribe.py
baselines/: requirements-baselines.txt
baselines/giantmidi/: transcribe_new_files.py
baselines/hft_transformer/: transcribe_new_files.py
baselines/hft_transformer/src/: amt.py
config/: config.json
config/accelerate/: 1gpu_config.yaml  8gpu_config.yaml
config/models/: medium-final.json  medium-single.json  medium-stacked.json  medium-triple.json  medium.json  small-final.json  small.json  test.json
experiments/: get_maestro_split.py  loader_util.py  process_input_files.py  run_dtw_transcription.sh  run_maestro_aug_1.sh  run_maestro_aug_2.sh
experiments/baselines/: requirements-baselines.txt
experiments/baselines/giantmidi/: transcribe_new_files.py
notebooks/: 2024-03-06__test-alignment-methods.ipynb  2024-03-07__run-aria-amt-and-evals.ipynb  2024-03-14__try-to-interpret-fogconvolver.ipynb  Untitled.ipynb
scripts/: split.py  transcribe-youtube.sh
scripts/eval/: adjust.py  dedupe.py  dtw.py  dtw.sh  mir.py  mir.sh  prune.py  prune.sh  req-eval.txt  split.py  split.sh
tests/: test_data.py  test_tokenizer.py
tests/test_data/: 147.mid  maestro1.mid  maestro2.mid  maestro3.mid
(+3 files in other folders)
