[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-amt"
version = "0.0.1"
description = ""
authors = [{name = "Louis Bradshaw", email = "loua19@outlook.com"}]
requires-python = ">=3.11"

dependencies = [
    "ariautils @ git+https://github.com/EleutherAI/aria-utils.git",
    "torch>=2.3",
    "torchaudio",
    "safetensors",
    "librosa",
    "tqdm",
    "orjson",
]

[project.optional-dependencies]
eval = ["mir_eval"]
train = ["accelerate"]
dev = ["black"]
all = ["mir_eval", "accelerate", "black"]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'

[project.scripts]
aria-amt = "amt.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["amt", "amt.*"]

[tool.setuptools.package-data]
amt = ["../config/*.json", "../config/models/*.json"]
